Update the HTML example

--- a/example/index.html
+++ b/example/index.html
@@ -33,7 +33,7 @@
     <script src="https://unpkg.com/react/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-    <script src="dist/index.js"></script>
+    <script src="_browserified.js"></script>
   </head>
   <body>
     <div id="react-root"></div>
