Publish a UMD build

--- a/example.html
+++ b/example.html
@@ -3,6 +3,7 @@
   <head>
     <title>Nanostyled Example</title>
     <style>
+      /* A DIY functional-CSS framework */
       .sans { font-family: sans-serif; }
       .serif { font-family: georgia, serif; }
       .mono { font-family: menlo, monaco, monospace; }
@@ -33,7 +34,7 @@
     <script src="https://unpkg.com/react/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-    <script src="_browserified.js"></script>
+    <script src="dist/nanostyled.umd.js"></script>
   </head>
   <body>
     <div id="react-root"></div>
